--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,28 @@ body {
   margin: 0; 
   padding: 0; 
   background-color:#4199c9;
+  background-image: url(../media/bg.jpg);
+  background-size: cover; /* Растягивает изображение на весь экран */
+  background-position: center; /* Центрирует изображение */
+  /*background-repeat: no-repeat; /* Отключает повторение */
+  background-attachment: fixed; /* Фиксирует фон при прокрутке (опционально) */
   
+}
+
+.marker-container {
+  position: relative;
+  z-index: 10;
+}
+
+.marker-container:hover {
+  z-index: 1000 !important;
 }
 
 .marker-container use{
   transition: transform 0.2s ease;
-  opacity: 0.9;
+  opacity: 1;
   filter: drop-shadow(4px 2px 0px rgba(0, 0, 0, 0.60));
-  z-index: 20;
+  
 }
 
 
@@ -17,8 +31,8 @@ body {
   transform: scale(1.0) translateY(1px);
   filter: drop-shadow(6px 4px 2px rgba(0, 0, 0, 0.68));
   cursor: pointer;
-  opacity: 1;
-  z-index: 10;
+  opacity:0.5;
+  
 }
 
 .marker-container use {
@@ -40,6 +54,7 @@ path {
   background-repeat: no-repeat;
   background-position: center;
   /* pointer-events: none; Чтобы клики проходили сквозь foreignObject */
+  z-index: 91;
 }
 
 .ripples {
@@ -169,6 +184,7 @@ svg {
 	left: 0;
 	height: 100%;
 	width: 100%;
+  
 }
 
 .description {
@@ -257,8 +273,6 @@ svg {
     text-decoration: underline;
 }
 
-
-
 .red {
   background-image: url('../media/yona-icon.png');
 }
@@ -317,7 +331,10 @@ svg {
   stroke-width: 1px;     /* Толщина обводки */
   filter: drop-shadow(0 0 5px rgba(255,235,59,0.7)); /* Свечение */
   opacity: 0;
-  z-index: 90;
+  z-index: 5;
+  pointer-events: none !important;
+  display: none;
+  transition: none !important;
 }
 
 #activity-map {
