--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0; 
   padding: 0; 
   background-color:#4199c9;
-  background-image: url(../media/bg.jpg);
+  background-image: url(../media/2.jpg);
   background-size: cover; /* Растягивает изображение на весь экран */
   background-position: center; /* Центрирует изображение */
   /*background-repeat: no-repeat; /* Отключает повторение */
@@ -58,13 +58,12 @@ path {
 }
 
 .ripples {
-  margin: 0; 
-  width: 50%;
-
-  height: 100vh;
-  padding: 0; 
-  background-image: url('https://atuin.ru/demo/ripples/water.jpg');
-  background-size: cover;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background-image: url('../media/bg.jpg');
+    background-size: cover;
 }
 
 /* Навигационная панель */
