--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0; 
   padding: 0; 
   background-color:#4199c9;
-  background-image: url(../media/1.jpg);
+  background-image: url(../media/2.jpg);
   background-size: cover; /* Растягивает изображение на весь экран */
   background-position: center; /* Центрирует изображение */
   /*background-repeat: no-repeat; /* Отключает повторение */
@@ -62,7 +62,7 @@ path {
     width: 100%;
     height: 100vh;
     overflow: hidden;
-    background-image: url('../media/1.jpg');
+    background-image: url('../media/bg.jpg');
     background-size: cover;
 }
 
@@ -312,7 +312,7 @@ svg {
 .indigo { background-color: #3f51b5; }
 .violet { background-color: #673ab7; }
 
-.part.highlighted {
+/* .part.highlighted {
   opacity: 1 !important;
   stroke: white;
   stroke-width: 2px;
@@ -321,7 +321,7 @@ svg {
 
 .part.camp { fill: #940000; }
 .part.green { fill: #3ef757; }
-.part.red { fill: #ec3159; }
+.part.red { fill: #ec3159; } */
 
 .quest-path { /* Стиль для кружков-точек */
   r: 8px;               /* Радиус точки */
@@ -344,17 +344,17 @@ svg {
 	display: none;
 }
 
-.part {
+ .part {
   display: none;
   stroke: #d8d5d3;
   stroke-width: 1px;
   transition: opacity 0.2s;
-}
+} 
 
 /* Стили для видимых меток */
-.part:visible {
+ .part:visible {
   display: block;
-}
+} 
 
 
 	 
